working version without postgres set up

--- a/setup/clubmanner.com.conf
+++ b/setup/clubmanner.com.conf
@@ -1,23 +1,22 @@
 <VirtualHost *:80>
-        WSGIDaemonProcess clubmanner.com python-home=/home/ubuntu/github/ClubManner-Email/emailenv python-path=/home/ubuntu/github/ClubManner-Email/clubmanneremail
-        WSGIScriptAlias / /home/ubuntu/github/ClubManner-Email/clubmanneremail/clubmanneremail/wsgi.py process-group=clubmanner.com
+        WSGIDaemonProcess clubmanner.com python-home=/home/ubuntu/ClubManner-Email/emailenv python-path=/home/ubuntu/ClubManner-Email/clubmanneremail
+        WSGIScriptAlias / /home/ubuntu/ClubManner-Email/clubmanneremail/clubmanneremail/wsgi.py process-group=clubmanner.com
 
         ServerAdmin iamandrewau@gmail.com
-        DocumentRoot /home/ubuntu/github/ClubManner-Email/clubmanneremail
-        #DocumentRoot ~/ClubManner-frontend/mock
+        DocumentRoot /home/ubuntu/ClubManner-Email/clubmanneremail
         Alias "/mock" "/var/www/clubmanner.com/mock/"
         Alias "/resources" "/var/www/resources/"
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
-        <Directory /home/ubuntu/github/ClubManner-Email/clubmanneremail>
+        <Directory /home/ubuntu/ClubManner-Email/clubmanneremail>
                 <Files wsgi.py>
                         Require all granted
                 </Files>
         </Directory>
-        <Directory /home/ubuntu/ClubManner-frontend/mock/>
-                DirectoryIndex mock.html
-                Options Indexes FollowSymLinks
-                AllowOverride None
-                Require all granted
-        </Directory>
+        #<Directory /home/ubuntu/ClubManner-frontend/mock/>
+        #        DirectoryIndex mock.html
+        #        Options Indexes FollowSymLinks
+        #        AllowOverride None
+        #        Require all granted
+        #</Directory>
 </VirtualHost>
